# -

./: .env.example  .gitignore  00-spec-httvps.md.txt  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_outline_keys.py  0003_outline_health.py  0004_admin_audit.py
backend/app/: admin_cli.py  main.py
backend/app/api/: admin.py  internal.py
backend/app/clients/: outline_client.py
backend/app/core/: config.py  database.py  logging.py  metrics.py  security.py  tracing.py
backend/app/models/: __init__.py  admin_audit_log.py  device.py  gateway_node.py  outline_access_key.py  outline_node.py  outline_pool.py  outline_pool_node.py  outline_pool_region.py  plan.py  region.py  session.py  subscription.py  user.py
backend/app/schemas/: admin.py  auth.py  device.py  heartbeat.py  httvps.py  nodes.py  plan.py  region.py  session.py  subscription.py  usage.py
backend/app/services/: admin_nodes_service.py  audit_service.py  auth_service.py  device_service.py  heartbeat_service.py  httvps_session_service.py  nodes_service.py  outline_health_service.py  outline_pool_service.py  plan_service.py  region_service.py  (+2 more)
backend/tests/: conftest.py  test_auth_validate_device.py  test_health.py  test_nodes_assign_outline.py  test_nodes_revoke_outline.py  test_outline_client.py  test_outline_health_service.py
sdk/: pyproject.toml
sdk/examples/: basic_client.py
sdk/httvps/: __init__.py  client.py
sdk/tests/: conftest.py  test_client.py
(+57 files in other folders)
