[project]
name = "httvps-backend"
version = "0.1.0"
description = "HTTVPS control plane"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "SQLAlchemy==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "aiosqlite==0.20.0",
    "httpx==0.27.0",
    "prometheus-client==0.20.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.6"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
