[project]
name = "httvps-sdk"
version = "0.1.0"
description = "HTTVPS client SDK"
requires-python = ">=3.11"
dependencies = [
    "websockets==12.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.6"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["httvps*"]
